# inpla

./: .clang-format  .gitignore  meson.build  meson_options.txt
sample/lambda/: linear-systemT.in
sample/process_networks/: processnet1.in  processnet_fib.in
sample/pseudo_higher_order/: map.in  reduce.in
sample/puzzle/: hanoi.in  nqueen.in
sample/recursive_functions/: ack_3_5.in  fib-tail_9.in  fib_9.in  fib_9_abbr.in  gcd.in  gcd_another.in  pow.in
sample/sort/: bsort.in  isort.in  msort.in  qsort.in
sample/turing_machine/: TuringMachine.in
sample/unary_numbers/: FibSZ_9.in  hanoiSZ.in  nqueenSZ.in
sample/unary_numbers/GCM2023/: FibSZ_31-reuse.in  FibSZ_31.in  hanoi19-reuse.in  hanoi19.in  nqueenSZ_10-reuse.in  nqueenSZ_10.in
src/: ast.c  ast.h  cas_spinlock.h  cmenv.c  cmenv.h  config.h  heap.c  heap.h  id_table.c  id_table.h  imcode.c  imcode.h  inpla.c  inpla.h  lex.l  mytype.h  name_table.c  name_table.h  opt.c  opt.h  parser.y  ruletable.c  ruletable.h  timer.h  types.h  vm.c  vm.h
src/linenoise/: linenoise.c
