# ------------------------------------------------
# Heaps
# ------------------------------------------------
# There are three methods for agents and names heaps:
#   - Fixed-size ring buffers
#       The size is specified by an execution option -c
#
#   - Expandable ring buffers
#       Automatically new buffers are inserted when all are run up.
#
#   - Ring buffers whose Initial size and newly inserted size
#     are flexibly changed. (DEFAULT)
#       The initial size and the expansion magnification are
#       specified by execution options -Xms, -Xmt, respectively.
#
option(
    'heap_type',
    type : 'combo',
    choices : ['expandable', 'fixed', 'flex_expandable'],
    value : 'flex_expandable',
    description : 'Type of heap to use in the inpla executable.',
)